tests/inputs/invalid/syntax/bad_order.crbc
type int is integer;
type is double real;
type bool is boolean;

routine routineWithParametersAndType (parameter1 is integer) : integer is 
    //variable declarations with initial value
    var integerWithInitialValue : integer is 1;
    var realWithInitialValue : real is 1.1;
    var booleanWithInitialValue : boolean is true;
    var intWithInitialValue : int is 2;
    var doubleWithInitialValue : double is 2.2;
    var boolWithInitialValue : bool is false;
    
    return 1;
end

routine routineWithParamter (parameter2 is integer) is
    //variable declarations without initial value
    var integerWithInitialValue : integer;
    var realWithInitialValue : real;
    var booleanWithInitialValue : boolean;
    var intWithInitialValue : int;
    var doubleWithInitialValue : double;
    var boolWithInitialValue : bool;

    //var nestedRoutineCall : routineWithoutAnything();

    return 2;
end

routine routineWithoutAnything () is 
    var inferredInteger is 3;
    var inferredReal is 3.3;
    var inferredBoolean is true;

    var arrayVar : array [3] integer;
    var recordVar : record 
        var a : integer is 0;
        var b : integer is 1;
    end;

    return 3;
end

routine routineWithIfStatement () : integer is 
    var x : integer is 7;
    if (x > 5) then
        print (x);
    end
    x := 5;
    if (x < 6 and (6 <= 9) ) then
        print(x);
    else 
        print(9);
    end
    return 0;
end 

routine routineWithWhileLoop() : integer is
    var i : int is 5;
    while i > 0 loop
        print(i);
        i := (i - 1);
    end
end

routine routineWithForLoop() : integer is 
    for i in 0 .. 3 loop
        print(i);
    end
    for i in reverse 0 .. 3 loop
        print(i);
    end
end

routine routineWithForeachAndArray() : integer is 
    var x : array [3] integer;
    x[1] := 1;
    x[2] := 2;
    x[3] := 3;
    foreach i from x loop
        print(i);
    end
end

routine routineWithRecord () : integer is 
   var x : record 
        var a : integer is 0;
        var b : integer is 1;
    end;
    print(x.a);
    print(x.b); 
end 

routine main () : integer is
    var returnedValue1 : integer is routineWithParametersAndType(1);
    var returnedValue2 is routineWithParamter(2);   
    routineWithRecord(1); 
    routineWithForeachAndArray();
    return 0;
end
